--- a/bite_buddy/pubspec.yaml
+++ b/bite_buddy/pubspec.yaml
@@ -30,6 +30,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  cloud_firestore: 3.1.5
+  firebase_core_platform_interface: 4.5.1
 
 
   # The following adds the Cupertino Icons font to your application.
