--- a/bite_buddy/pubspec.yaml
+++ b/bite_buddy/pubspec.yaml
@@ -30,8 +30,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  cloud_firestore: 3.1.5
-  firebase_core_platform_interface: 4.5.1
+  cloud_firestore: 4.5.3
+  firebase_core_platform_interface: 4.6.0
+  firebase_core: 2.10.0
+  firebase_auth: 4.4.2
 
 
   # The following adds the Cupertino Icons font to your application.
