--- a/bite_buddy/pubspec.yaml
+++ b/bite_buddy/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   firebase_core_platform_interface: 4.6.0
   firebase_core: 2.10.0
   firebase_auth: 4.4.2
+  flutter_cache_manager: 3.3.0
 
 
   # The following adds the Cupertino Icons font to your application.
